@@ -9,6 +9,7 @@
 
 #undef HAVE_GETHOSTBYNAME_R_GLIBC
 #undef HAVE_GETHOSTBYNAME_R_SOLARIS
+#undef HAVE_GETHOSTBYNAME_R_HPUX
 #undef HAVE_GETHOSTBYNAME_R_GLIB_MUTEX
 
 /* #undef PACKAGE */
