@@ -1,3 +1,13 @@
+Sat Jan 29 16:55:41 2000  David A Helder  <dhelder@umich.edu>
+
+	* AUTHORS: Added Soeren Sandmann to AUTHORS
+
+2000-01-29  Soren Sandmann Pedersen  <sandmann@saratoga.daimi.au.dk>
+
+	* src/inetaddr.c: Use HP-UX' gethostbyname_r
+	* acconfig.h: add GETHOSTBYNAME_R_HPUX
+	* configure.in: detect HP-UX' gethostbyname_r
+
 Wed Jan 26 12:37:51 2000  David A Helder  <dhelder@umich.edu>
 
 	* AUTHORS: Fixed Xavier's email address.
